--- a/page2.html
+++ b/page2.html
@@ -81,8 +81,8 @@
         <div class="col-lg-12">
           <ul class="pagination">
             <li><a href="#">&laquo;</a></li>
-            <li class="active"><a href="./index.html">1</a></li>
-            <li><a href="./page2.html">2</a></li>
+            <li><a href="./index.html">1</a></li>
+            <li class="active"><a href="./page2.html">2</a></li>
             <li><a href="./page3.html">3</a></li>
             <li><a href="./page4.html">4</a></li>
             <li><a href="./page5.html">5</a></li>
