--- a/page5.html
+++ b/page5.html
@@ -81,11 +81,11 @@
         <div class="col-lg-12">
           <ul class="pagination">
             <li><a href="#">&laquo;</a></li>
-            <li class="active"><a href="./index.html">1</a></li>
+            <li><a href="./index.html">1</a></li>
             <li><a href="./page2.html">2</a></li>
             <li><a href="./page3.html">3</a></li>
             <li><a href="./page4.html">4</a></li>
-            <li><a href="./page5.html">5</a></li>
+            <li class="active"><a href="./page5.html">5</a></li>
             <li><a href="#">&raquo;</a></li>
           </ul>        
         </div>
