--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Portfolio showcasing various projects">
+    <meta name="author" content="Your Name">
 
-    <title>Three Column Portfolio Template for Bootstrap 3</title>
+    <title>Portfolio Showcase</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom CSS for the '3 Col Portfolio' Template -->
+    <!-- Custom CSS -->
     <link href="css/3-col-portfolio.css" rel="stylesheet">
   </head>
 
@@ -26,48 +26,45 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
+          <a class="navbar-brand" href="#">Portfolio</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
+        </div>
+      </div>
     </nav>
 
     <div class="container">
 
       <div class="row">
-
         <div class="col-lg-12">
-          <h1 class="page-header">3 Col Portfolio <small>Showcase Your Work</small></h1>
+          <h1 class="page-header">Portfolio Showcase <small>Highlighting Key Projects</small></h1>
         </div>
-
       </div>
 
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="#project1"><img class="img-responsive" src="https://source.unsplash.com/700x400/?technology" alt="Project 1"></a>
+          <h3><a href="#project1">Hệ thống quản lý chấm công</a></h3>
+          <p>Ứng dụng chấm công thông minh bằng nhận diện khuôn mặt và GPS, giúp doanh nghiệp theo dõi thời gian làm việc của nhân viên chính xác hơn.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="#project2"><img class="img-responsive" src="https://source.unsplash.com/700x400/?ecommerce" alt="Project 2"></a>
+          <h3><a href="#project2">Website thương mại điện tử</a></h3>
+          <p>Nền tảng mua sắm trực tuyến hiện đại, tích hợp thanh toán, quản lý đơn hàng và tối ưu trải nghiệm người dùng.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="#project3"><img class="img-responsive" src="https://source.unsplash.com/700x400/?chatbot" alt="Project 3"></a>
+          <h3><a href="#project3">Ứng dụng chatbot AI</a></h3>
+          <p>Chatbot hỗ trợ khách hàng tự động, có khả năng trả lời câu hỏi và gợi ý sản phẩm dựa trên lịch sử mua sắm.</p>
         </div>
 
       </div>
@@ -77,7 +74,6 @@
       <div style="font-size: large; text-align: center;"><a href="https://wokushop.com/">Liên hệ chúng tôi</a></div>
 
       <div class="row text-center">
-        
         <div class="col-lg-12">
           <ul class="pagination">
             <li><a href="#">&laquo;</a></li>
@@ -89,15 +85,12 @@
             <li><a href="#">&raquo;</a></li>
           </ul>        
         </div>
-
       </div>
 
-    </div><!-- /.container -->
+    </div>
 
     <div class="container">
-
       <hr>
-
       <footer>
         <div class="row">
           <div class="col-lg-12">
@@ -105,10 +98,8 @@
           </div>
         </div>
       </footer>
-      
-    </div><!-- /.container -->
+    </div>
 
-    <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
     <script type="text/javascript">
@@ -116,5 +107,4 @@
       document.getElementById('getCurrentDate').innerHTML = dt.getFullYear();
     </script>
   </body>
-
 </html>
