--- a/page2.html
+++ b/page2.html
@@ -3,20 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Portfolio Page 2 - Showcase More Work">
     <meta name="author" content="">
 
-    <title>Three Column Portfolio Template for Bootstrap 3</title>
+    <title>Portfolio - Page 2</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom CSS for the '3 Col Portfolio' Template -->
     <link href="css/3-col-portfolio.css" rel="stylesheet">
   </head>
 
   <body>
-
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -28,76 +25,63 @@
           </button>
           <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
+        </div>
+      </div>
     </nav>
 
     <div class="container">
-
       <div class="row">
-
         <div class="col-lg-12">
-          <h1 class="page-header">3 Col Portfolio <small>Showcase Your Work</small></h1>
+          <h1 class="page-header">Portfolio - Page 2 <small>More Amazing Projects</small></h1>
         </div>
-
       </div>
 
       <div class="row">
-
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <h3><a href="#project-link">E-Commerce Platform</a></h3>
+          <p>A feature-rich e-commerce platform with secure payment integration and real-time order tracking.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <h3><a href="#project-link">Social Media App</a></h3>
+          <p>An interactive social media application enabling real-time messaging and content sharing.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <h3><a href="#project-link">AI-Powered Chatbot</a></h3>
+          <p>An AI-driven chatbot designed to provide instant customer support and automate responses.</p>
         </div>
-
       </div>
 
       <hr>
-
       <div style="font-size: large; text-align: center;"><a href="https://wokushop.com/">Liên hệ chúng tôi</a></div>
 
       <div class="row text-center">
-        
         <div class="col-lg-12">
           <ul class="pagination">
-            <li><a href="#">&laquo;</a></li>
-            <li><a href="./index.html">1</a></li>
-            <li class="active"><a href="./page2.html">2</a></li>
-            <li><a href="./page3.html">3</a></li>
-            <li><a href="./page4.html">4</a></li>
-            <li><a href="./page5.html">5</a></li>
+            <li><a href="index.html">&laquo;</a></li>
+            <li><a href="index.html">1</a></li>
+            <li class="active"><a href="page2.html">2</a></li>
+            <li><a href="page3.html">3</a></li>
+            <li><a href="page4.html">4</a></li>
+            <li><a href="page5.html">5</a></li>
             <li><a href="#">&raquo;</a></li>
-          </ul>        
+          </ul>
         </div>
-
       </div>
-
-    </div><!-- /.container -->
+    </div>
 
     <div class="container">
-
       <hr>
-
       <footer>
         <div class="row">
           <div class="col-lg-12">
@@ -105,8 +89,7 @@
           </div>
         </div>
       </footer>
-      
-    </div><!-- /.container -->
+    </div>
 
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
@@ -116,5 +99,4 @@
       document.getElementById('getCurrentDate').innerHTML = dt.getFullYear();
     </script>
   </body>
-
 </html>
