--- a/page5.html
+++ b/page5.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Portfolio showcasing various projects">
+    <meta name="author" content="Your Name">
 
-    <title>Three Column Portfolio Template for Bootstrap 3</title>
+    <title>Portfolio - Page 5</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom CSS for the '3 Col Portfolio' Template -->
+    <!-- Custom CSS -->
     <link href="css/3-col-portfolio.css" rel="stylesheet">
   </head>
 
@@ -26,48 +26,47 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
+          <a class="navbar-brand" href="index.html">My Portfolio</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
+        </div>
+      </div>
     </nav>
 
     <div class="container">
 
       <div class="row">
-
         <div class="col-lg-12">
-          <h1 class="page-header">3 Col Portfolio <small>Showcase Your Work</small></h1>
+          <h1 class="page-header">Portfolio <small>Page 5</small></h1>
+          <p>Welcome to the final page of my portfolio. This section showcases some of my latest projects, including cutting-edge innovations in artificial intelligence, blockchain, and software development.</p>
         </div>
-
       </div>
 
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="#project13"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+          <h3><a href="#project13">Project 13</a></h3>
+          <p>A blockchain-based supply chain management system that enhances transparency, reduces fraud, and improves efficiency in logistics.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="#project14"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+          <h3><a href="#project14">Project 14</a></h3>
+          <p>A machine learning model designed to predict stock market trends based on historical data and sentiment analysis.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="#project15"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+          <h3><a href="#project15">Project 15</a></h3>
+          <p>An advanced cybersecurity tool that uses AI to detect and mitigate potential threats in real-time, enhancing system security.</p>
         </div>
 
       </div>
@@ -76,39 +75,33 @@
 
       <div style="font-size: large; text-align: center;"><a href="https://wokushop.com/">Liên hệ chúng tôi</a></div>
 
+
       <div class="row text-center">
-        
         <div class="col-lg-12">
           <ul class="pagination">
-            <li><a href="#">&laquo;</a></li>
-            <li><a href="./index.html">1</a></li>
-            <li><a href="./page2.html">2</a></li>
-            <li><a href="./page3.html">3</a></li>
-            <li><a href="./page4.html">4</a></li>
-            <li class="active"><a href="./page5.html">5</a></li>
-            <li><a href="#">&raquo;</a></li>
-          </ul>        
+            <li><a href="page4.html">&laquo;</a></li>
+            <li><a href="index.html">1</a></li>
+            <li><a href="page2.html">2</a></li>
+            <li><a href="page3.html">3</a></li>
+            <li><a href="page4.html">4</a></li>
+            <li class="active"><a href="page5.html">5</a></li>
+          </ul>
         </div>
-
       </div>
 
-    </div><!-- /.container -->
+    </div>
 
     <div class="container">
-
       <hr>
-
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Company <span id="getCurrentDate"></span></p>
+            <p>Copyright &copy; Your Company <span id="getCurrentDate"></span></p>
           </div>
         </div>
       </footer>
-      
-    </div><!-- /.container -->
+    </div>
 
-    <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
     <script type="text/javascript">
@@ -116,5 +109,4 @@
       document.getElementById('getCurrentDate').innerHTML = dt.getFullYear();
     </script>
   </body>
-
 </html>
